--- a/GymNote/Views/Storyboards/Onboarding.storyboard
+++ b/GymNote/Views/Storyboards/Onboarding.storyboard
@@ -188,7 +188,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KDs-ol-umA">
-                                <rect key="frame" x="283" y="576" width="100" height="30"/>
+                                <rect key="frame" x="283" y="647" width="100" height="30"/>
                                 <color key="backgroundColor" systemColor="labelColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="5qR-Jd-3Xj"/>
@@ -203,22 +203,37 @@
                                     <segue destination="t1o-eT-yfn" kind="show" identifier="toAccountConfirmationVC" id="l1l-u6-KFp"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Zzo-Z0-oV7">
-                                <rect key="frame" x="77" y="232.5" width="260" height="259"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="Zzo-Z0-oV7">
+                                <rect key="frame" x="41.5" y="229" width="331" height="337"/>
+                                <color key="tintColor" systemColor="labelColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="260" id="OtX-a5-Z1f"/>
                                     <constraint firstAttribute="width" secondItem="Zzo-Z0-oV7" secondAttribute="height" multiplier="1:1" id="UnJ-xC-IO8"/>
                                 </constraints>
-                                <imageReference key="image" image="person.circle" catalog="system" symbolScale="default"/>
+                                <imageReference key="image" image="person.circle.fill" catalog="system" symbolScale="large"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7AU-Te-k6S">
+                                <rect key="frame" x="41.5" y="232" width="331" height="331"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="7AU-Te-k6S" secondAttribute="height" multiplier="1:1" id="jys-Tj-IEN"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain"/>
+                                <connections>
+                                    <action selector="profileImageButtonTapped:" destination="IIn-hd-bhZ" eventType="touchUpInside" id="HNf-Pt-Wj3"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="oNm-z0-fQP"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="KDs-ol-umA" firstAttribute="trailing" secondItem="01t-vg-mHm" secondAttribute="trailing" id="2cf-V3-g33"/>
                             <constraint firstItem="Zzo-Z0-oV7" firstAttribute="top" secondItem="01t-vg-mHm" secondAttribute="bottom" constant="60" id="FCm-hH-mVR"/>
+                            <constraint firstItem="KDs-ol-umA" firstAttribute="top" secondItem="7AU-Te-k6S" secondAttribute="bottom" constant="84" id="Nbj-Wx-EKs"/>
                             <constraint firstItem="01t-vg-mHm" firstAttribute="centerX" secondItem="oNm-z0-fQP" secondAttribute="centerX" id="NiT-EY-BWL"/>
                             <constraint firstItem="01t-vg-mHm" firstAttribute="width" secondItem="oNm-z0-fQP" secondAttribute="width" multiplier="0.85" id="O27-La-tcq"/>
+                            <constraint firstItem="7AU-Te-k6S" firstAttribute="top" secondItem="01t-vg-mHm" secondAttribute="bottom" constant="60" id="ep7-ob-kyV"/>
+                            <constraint firstItem="7AU-Te-k6S" firstAttribute="centerX" secondItem="oNm-z0-fQP" secondAttribute="centerX" id="g6R-ez-RTY"/>
+                            <constraint firstItem="Zzo-Z0-oV7" firstAttribute="width" secondItem="oNm-z0-fQP" secondAttribute="width" multiplier="0.8" id="mgP-uU-odk"/>
                             <constraint firstItem="01t-vg-mHm" firstAttribute="top" secondItem="oNm-z0-fQP" secondAttribute="top" constant="48" id="npQ-qV-QbT"/>
                             <constraint firstItem="KDs-ol-umA" firstAttribute="top" secondItem="Zzo-Z0-oV7" secondAttribute="bottom" constant="84" id="oJ0-Ef-Mal"/>
                             <constraint firstItem="Zzo-Z0-oV7" firstAttribute="centerX" secondItem="oNm-z0-fQP" secondAttribute="centerX" id="zQz-Hc-1W8"/>
@@ -227,6 +242,10 @@
                     <navigationItem key="navigationItem" id="vwN-SP-UBP">
                         <barButtonItem key="backBarButtonItem" title="Back" id="bIZ-K1-gM4"/>
                     </navigationItem>
+                    <connections>
+                        <outlet property="profileImageButton" destination="7AU-Te-k6S" id="C2c-xo-xYJ"/>
+                        <outlet property="profileImageView" destination="Zzo-Z0-oV7" id="vOD-x1-2Hz"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TNL-Q1-CBm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -241,7 +260,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Ol-PP-0cG">
-                                <rect key="frame" x="283" y="627.5" width="100" height="30"/>
+                                <rect key="frame" x="283" y="697.5" width="100" height="30"/>
                                 <color key="backgroundColor" systemColor="labelColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="3yc-T4-IWY"/>
@@ -263,16 +282,18 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="Rch-qw-4dJ">
-                                <rect key="frame" x="41.5" y="232" width="331" height="347.5"/>
+                                <rect key="frame" x="41.5" y="232" width="331" height="417.5"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="CD7-Bz-iVG">
-                                        <rect key="frame" x="66" y="0.5" width="199" height="197.5"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CD7-Bz-iVG">
+                                        <rect key="frame" x="31.5" y="-3" width="268" height="274.5"/>
+                                        <color key="tintColor" systemColor="labelColor"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="CD7-Bz-iVG" secondAttribute="height" multiplier="1:1" id="fHm-Cx-kKo"/>
                                         </constraints>
+                                        <imageReference key="image" image="person.circle.fill" catalog="system" symbolScale="large"/>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="waE-NH-rIl">
-                                        <rect key="frame" x="0.0" y="222.5" width="331" height="125"/>
+                                        <rect key="frame" x="0.0" y="292.5" width="331" height="125"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(username)" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rjp-bW-lDd">
                                                 <rect key="frame" x="0.0" y="0.0" width="331" height="29"/>
@@ -346,7 +367,7 @@
                                     </stackView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="CD7-Bz-iVG" firstAttribute="width" secondItem="Rch-qw-4dJ" secondAttribute="width" multiplier="0.6" id="3QK-Pr-Qfh"/>
+                                    <constraint firstItem="CD7-Bz-iVG" firstAttribute="width" secondItem="Rch-qw-4dJ" secondAttribute="width" multiplier="0.81" id="3QK-Pr-Qfh"/>
                                     <constraint firstItem="waE-NH-rIl" firstAttribute="width" secondItem="Rch-qw-4dJ" secondAttribute="width" id="P94-vq-ctE"/>
                                 </constraints>
                             </stackView>
@@ -369,6 +390,7 @@
                         <outlet property="doneSetupButton" destination="5Ol-PP-0cG" id="hA3-Gm-YGN"/>
                         <outlet property="feetLabel" destination="666-Kb-HWp" id="7HN-dD-K37"/>
                         <outlet property="inchesLabel" destination="xNz-gn-Xv2" id="Mci-Qw-Bc9"/>
+                        <outlet property="profileImageView" destination="CD7-Bz-iVG" id="crv-Lf-aiW"/>
                         <outlet property="usernameLabel" destination="Rjp-bW-lDd" id="yLl-TX-Ea1"/>
                         <outlet property="weightLabel" destination="cfz-LH-RKW" id="Ctg-a2-Y3p"/>
                     </connections>
@@ -397,7 +419,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="person.circle" catalog="system" width="128" height="121"/>
+        <image name="person.circle.fill" catalog="system" width="128" height="121"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
